返回用户的五子棋棋局数量以及状态
